refactor: 시험응시 이메일 관련 버그 수정